<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvSing_up"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="true"
        android:textColor="@color/colorMain"
        android:textSize="34sp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/tvFor_your_account"
        android:textColor="@color/colorMain"
        android:textSize="16sp"
        android:letterSpacing="0.3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:layout_gravity="center|center_vertical">

        <EditText
            android:id="@+id/nameCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/htName"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"/>

        <EditText
            android:id="@+id/emailCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/htEmailCreateAccount"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"/>

        <EditText
            android:id="@+id/passwordCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/htPasswordCreateAccount"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorMain"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/colorMain"/>


        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMain"
            android:layout_marginTop="10dp"
            android:text="I have read and agree the Privacy Policy"/>



        <Button
            android:id="@+id/btnSignUpCreateAccount"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@color/colorMain"
            android:layout_gravity="center"
            android:text="@string/btnSign_up_createAccount"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="50dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnLoginCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:color="@color/colorWhite"
            android:text="@string/btnLog_in_createAccount"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>